--- a/Dom/four.html
+++ b/Dom/four.html
@@ -47,8 +47,8 @@
 
       //remove
 
-      const langlang = document.querySelector("li:last-child");
-      langlang.remove(langlang);
+      //   const langlang = document.querySelector("li:last-child");
+      //   langlang.remove(langlang);
     });
 
     //edit
